# tnj

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  populate_test_data.ps1
.github/workflows/: release.yaml
docs/: CODE_REVIEW.md
scripts/: populate_test_data.ps1  populate_test_data.sh
src/: cli.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  utils.rs
src/tui/: app.rs  error.rs  events.rs  layout.rs  mod.rs  render.rs
src/tui/widgets/: color.rs  confirm_delete.rs  editor.rs  filter_modal.rs  filters_box.rs  form.rs  help.rs  item_view.rs  journal_list.rs  markdown_help.rs  mod.rs  note_list.rs  notebook_modal.rs  settings_list.rs  settings_view.rs  status_bar.rs  tabs.rs  tags.rs  task_list.rs
