[package]
name = "tnj-tui"
version = "0.1.11"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "TUI Tasks, notes and journals in Notebooks"
repository = "https://github.com/mikenorusis/tnj"
homepage = "https://github.com/mikenorusis/tnj"
keywords = ["cli", "tui", "terminal"]
categories = ["command-line-utilities"]
readme = "README.md"

# This ensures `cargo install my-tui-app` works perfectly
[[bin]]
name = "tnj"           # ← name of the binary (default is package name)
path = "src/main.rs"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.10"
directories = "6.0.0"
clap = { version = "4.5.53", features = ["derive"] }
thiserror = "2.0.17"
color-eyre = "0.6.5"
termimad = "0.34.1"
ratskin = "0.3.0"
arboard = "3.2.1"
